fix app base url
